# IOLineFile

./: CMakeLists.txt  FunctorDataClass.h  Task.h  main.cpp  text.txt
